test/test_12112908_3.out
Error type A at Line 18: Unknown characters ''v50''
