test/test_12112908_3.spl
int length;
struct array
{
  int index;
  char data;
};
int test_3()
{
  struct array arr_0;
  struct array arr_1;
  struct arr arr_2;
  length = 2;
  arr_0.index = 0;
  arr_0.data = 'a';
  arr_1.index = 1;
  arr_1.data = 'b';
  arr_0.index = 2;
  arr_0.data = 'v50';
}